Cleanup: Log file is now created from template is missing, code refactoring, embed log XML template into resources

--- a/Tomato.csproj
+++ b/Tomato.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Logging.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Timer.cs" />
@@ -102,9 +103,6 @@
   <ItemGroup>
     <Content Include="1353161231_Tomato.ico" />
     <Content Include="Alarm05_converted.wav">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="log.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <None Include="Resources\1353161231_Tomato.ico" />
